fixing findbugs warnings : removing unused variables
svn path=/trunk/; revision=6384


Former-commit-id: a18124406f36f80b115735ff0f739114d7db40f0